ADD description of new full text search filter for the new item ui de en

--- a/docs/en-gb/modules/item/pages/item-search.adoc
+++ b/docs/en-gb/modules/item/pages/item-search.adoc
@@ -195,6 +195,26 @@ The search results only display products that are not linked to one of these xre
 |Select one or more manufacturers from the drop-down list (icon:check-square[role="blue"]).
 The search results only display products that are linked to one of these xref:item:managing-items.adoc#_basic_settings[manufacturers].
 
+| *Full text search*
+|Enter item data, e.g. the item’s name, model, or an appropriate keyword.
+The search results display products that match this data.
+
+*_Note_*: The following item parameters are searched:
+
+* Item ID
+* Variation ID
+* Variation number
+* Variation name
+* Model
+* Manufacturer (external name)
+* Supplier item number
+* Name 1, Name 2, Name 3
+* Short description
+* Description
+* Technical data
+* Meta keywords
+* Barcodes
+
 |====
 
 [discrete]
