--- a/docs/en-gb/modules/pos/pages/plentymarkets-pos-for-pos-users.adoc
+++ b/docs/en-gb/modules/pos/pages/plentymarkets-pos-for-pos-users.adoc
@@ -35,11 +35,11 @@ Logging into plentyPOS:
 . On the start screen, tap the plentymarkets App icon. +
 → The login screen is displayed.
 . Enter the access data. Pay attention to the explanations given in <<table-POS-users-login>>. Pay attention to the explanations given in <<table-POS-users-login>>.
-. Tap *Login*. +
+. Tap on *Login*. +
 → The start screen of the plentymarkets App is displayed.
-. Tap the menu symbol at the top left of the screen. +
+. Tap on the menu symbol at the top left of the screen. +
 → The menu is displayed.
-. Tap *POS*. +
+. Tap on *POS*. +
 → plentyPOS opens.
 
 [TIP]
@@ -83,10 +83,10 @@ If you change the user account whilst in the process of creating an order, the n
 [.instruction]
 Switching to a different user account:
 
-. Tap the user icon at the top right of the app. +
+. Tap on the user icon at the top right of the app. +
 → A list of the real names of the users with an app PIN is shown. +
-*_Note:_*If your name is not listed, update the view by pulling the window down. If your name is still not shown, this means that no app PIN is saved for your user account in the plentymarkets back end.
-. Tap your user account.
+*_Note:_* If your name is not listed, update the view by pulling the window down. If your name is still not shown, this means that no app PIN is saved for your user account in the plentymarkets back end.
+. Tap on your user account.
 . If this is your first time logging into the app, enter your user password. For each subsequent login, you can enter your PIN. +
 → The user account is switched. +
 → The same area of the app opens. +
@@ -100,17 +100,17 @@ If you leave the checkout area but want to remain logged in, you can lock access
 [.instruction]
 Locking and unlocking access:
 
-. Tap the user icon at the top right of the app. +
+. Tap on the user icon at the top right of the app. +
 → A list of the real names of the users with an app PIN is shown.
-. Tap the *Lock* icon at the bottom left of the window. +
+. Tap on the *Lock* icon at the bottom left of the window. +
 → Access to the app is locked. +
 → Your name is shown as the first item in the list of users.
 . To unlock access to the app, tap the user icon at the top right of the screen.
-. Tap your user account.
+. Tap on your user account.
 . Enter your PIN or your password. +
 *_Note:_* To access, a PIN or a password is required if you exit and reopen the app. + +
 → Access to the app is unlocked. +
-*_Tip:_* You can change to a different user account even if access to the app is locked. Tap a different user account in the list to change users.
+*_Tip:_* You can change to a different user account even if access to the app is locked. Tap on a different user account in the list to change users.
 
 [#390]
 === Logging out and discarding login details
@@ -120,14 +120,14 @@ Proceed as described below to log out from the app and discard the login details
 [.instruction]
 Logging out and discarding login details:
 
-. Tap the user account icon at the top right of the app. +
+. Tap on the user account icon at the top right of the app. +
 → A list of the real names of the users with an app PIN is shown.
-. Tap the *Logout* icon at the bottom right of the window. +
+. Tap on the *Logout* icon at the bottom right of the window. +
 → The *Logout* window is displayed. +
-icon:map-signs[] *_Or:_*Tap the menu icon at the top left corner of the app and then *Log out*. +
+icon:map-signs[] *_Or:_* Tap on the menu icon at the top left corner of the app and then *Log out*. +
 . Deactivate the option *Log current user back in automatically*. +
 *_Note:_* This setting is saved and applies to all users of the app. +
-. Tap *Logout*. +
+. Tap on *Logout*. +
 → The user account is logged out completely and the login details are discarded. +
 → The login view is shown. +
 → To log in again, the language, base URL and user details must be entered.
@@ -140,14 +140,14 @@ Proceed as described below to close the plentymarkets app and remember the curre
 [.instruction]
 Closing the app and remembering the login details:
 
-. Tap the user icon at the top right of the app. +
+. Tap on the user icon at the top right of the app. +
 → A list of the real names of the users with an app PIN is shown.
-. Tap the *Logout* icon at the bottom right of the window. +
+. Tap on the *Logout* icon at the bottom right of the window. +
 → The *Logout* window is displayed. +
-icon:map-signs[] *_Or:_*Tap the menu icon at the top left corner of the app and then *Log out*. +
+icon:map-signs[] *_Or:_* Tap on the menu icon at the top left corner of the app and then *Log out*. +
 . Activate the option *Log current user back in automatically*. +
 *_Note:_* This setting is saved and applies to all users of the app. +
-. Tap *Logout*. +
+. Tap on *Logout*. +
 → The app is closed.  +
 → The active user account is logged out from the server.  +
 → Next time the app is opened, the same user account is logged in automatically.  +
@@ -162,7 +162,7 @@ In the plentymarkets app settings, you can change the background image and activ
 Customising the screen:
 
 . Open the plentymarkets app.
-. Tap the menu symbol at the top left of the screen. +
+. Tap on the menu symbol at the top left of the screen. +
 → The menu opens.
 . Tap on *Appearance*.
 . Carry out the settings. Pay attention to the explanations given in <<table-POS-view>>.
@@ -243,10 +243,10 @@ Adding items using the item search:
 → The item search opens.
 . Enter a search criterion. +
 *_Tip:_* In the *Item name* field, enter an asterisk (*) to display a list of all items available for the point of sale.
-. Tap *Search*. +
+. Tap on *Search*. +
 → A list of items matching the search criteria is displayed. +
 *_Note:_* Items with best before dates, batches or both are not found.
-. Tap the green check mark to add an item to the shopping cart. +
+. Tap on the green check mark to add an item to the shopping cart. +
 → The *Enter quantity* window is displayed.
 . Enter the quantity for the item that you want to add to the shopping cart. +
 → The item is added to the shopping cart and the current order sum is updated. +
@@ -263,7 +263,7 @@ Adding items from the list of favourites:
 . In the POS shopping cart, tap the star. +
 → The favourites list is displayed. +
 *_Note:_* Items with best before dates, batches or both are not found. +
-. Tap the green check mark to add an item to the shopping cart. +
+. Tap on the green check mark to add an item to the shopping cart. +
 → The *Enter quantity* window is displayed. +
 . Enter the quantity for the item that you want to add to the shopping cart. +
 → The item is added to the shopping cart and the current order sum is updated.
@@ -279,7 +279,7 @@ Scanning the item label with the camera of the device:
 
 . In the POS shopping cart, tap the label symbol. +
 → The mobile device's camera is activated.
-. Tap the camera icon to scan the label. +
+. Tap on the camera icon to scan the label. +
 *_Note:_* Items with best before dates, batches or both are not found. +
 → The item is added to the shopping cart with a quantity of 1. +
 → The total to be paid is updated. +
@@ -316,12 +316,12 @@ Receiving a cash payment:
 
 . Tap in the amount you received from the customer. +
 *_Tip:_* If a customer pays the exact amount in cash, you can tap the *Exact cash amount* button in the bottom row of the POS’s number pad instead of entering the amount. The exact amount is then automatically inserted in the *Received* field.
-. Tap *Payment received*. +
+. Tap on *Payment received*. +
 → The *Order created* view opens. +
 → The order is created. +
 → A receipt is printed. Otherwise, tap *Print receipt* to print the receipt. +
-*_Tip:_* Tap *Show order* to view the order details.
-. Tap *New order* to continue with ringing up the next customer at the POS.
+*_Tip:_* Tap on *Show order* to view the order details.
+. Tap on *New order* to continue with ringing up the next customer at the POS.
 
 [#90]
 ==== Receiving payment on payment terminal not connected to POS
@@ -333,15 +333,15 @@ Receiving payment on payment terminal not connected to POS:
 
 . *_Optional:_* If the customer only wants to pay part of the total amount by card, enter this partial amount. +
 *_Tip_* (version 1.8.5 and higher) If the customer wants to pay the whole amount with just one card payment, you do not enter the amount before you tap *Payment terminal*. The total amount is automatically inserted.
-. Tap *POS terminal*. +
+. Tap on *POS terminal*. +
 → The order total to be paid is displayed.
 . Book the payment using the POS terminal.
-. Tap *Payment received/Complete payment* to complete the payment. +
+. Tap on *Payment received/Complete payment* to complete the payment. +
 → When the order is paid in full, the *Order created* window is shown. +
 → The order is created. +
 → A receipt is printed. Otherwise, tap *Print receipt* to print the receipt. +
-*_Tip:_* Tap *Show order* to view the order details.
-. Tap *New order* to continue with ringing up the next customer at the POS.
+*_Tip:_* Tap on *Show order* to view the order details.
+. Tap on *New order* to continue with ringing up the next customer at the POS.
 
 ==== Booking card payments with a connected payment terminal
 
@@ -352,13 +352,13 @@ Booking card payments with a connected payment terminal:
 
 . *_Optional:_* If the customer only wants to pay part of the total amount by card, enter the partial amount. +
 *_Tip_* (version 1.8.5 and higher) If the customer wants to pay the whole amount with just one card payment, you do not enter the amount before you tap *Payment terminal*. The total amount is automatically inserted.
-. Tap *POS terminal*. +
+. Tap on *POS terminal*. +
 . Follow the instructions to complete payment on the terminal. +
 → When the complete amount is paid, the *Order created* window is shown. Otherwise, book additional payments. +
 → The order is created. +
 → The receipts are printed. Otherwise, tap *Print merchant receipt* and/or *Print customer receipt* to start printing manually. +
-*_Tip:_* Tap *Show order* to view the order details.
-. Tap *New order* to create a new POS order.
+*_Tip:_* Tap on *Show order* to view the order details.
+. Tap on *New order* to create a new POS order.
 
 [#160]
 ==== Accepting multipurpose coupons
@@ -369,16 +369,16 @@ Each multipurpose coupon has a unique coupon code. You enter this coupon code du
 Redeeming multipurpose coupons:
 
 . Place all the items in the POS shopping cart.
-. Tap the green arrow at the bottom of the POS shopping cart. +
+. Tap on the green arrow at the bottom of the POS shopping cart. +
 → A summary of the order and the available payment methods are displayed.
-. Tap *Gift card / discount*.
+. Tap on *Gift card / discount*.
 . Enter the coupon code in the *Gift card code/discount* field.
-. Tap *Coupon*. +
+. Tap on *Coupon*. +
 → The coupon amount is deducted from the order total. +
 → The amount the customer still has to pay is displayed.
 . *_Optional:_* Redeem additional multipurpose coupons by entering their codes the same way. +
 *_Note:_* The coupons are redeemed in the order in which you enter the coupon codes. If you remove a coupon code, the order total is recalculated.
-. Tap *Back*.
+. Tap on *Back*.
 . Finish processing the POS order as usual. +
 → If you apply a discount to the complete order or individual order items after you have entered coupon codes, the order total is recalculated.
 . Finish processing the POS order as usual. +
@@ -403,14 +403,14 @@ Buying items on account:
 . Open the <<135, customer data record>>. +
 *_Important:_* Ensure that the customer really is the person saved in the customer data. +
 → After a customer is selected, the *Invoice* icon can be selected.
-. Tap the *Invoice* icon. +
+. Tap on the *Invoice* icon. +
 → A window with the order details and customers details opens.
 . Check the order details.
-. Tap *Invoice*. +
+. Tap on *Invoice*. +
 → The *Order created* view opens. +
 → The order is created. +
 → The invoice is printed. Otherwise, tap *Print invoice* to print the invoice.
-. Tap *New order* to continue with ringing up the next customer at the POS.
+. Tap on *New order* to continue with ringing up the next customer at the POS.
 
 [#430]
 ==== Receiving more than one payment method (version 1.8.5 and higher)
@@ -420,7 +420,7 @@ From version 1.8.5 of the plentymarkets app, customers can pay for the same orde
 [IMPORTANT]
 .Always book payments on account last
 ====
-Tap the *Invoice* icon to complete the order and create an invoice. The invoice shows the amount the customer still has to pay. As such, if the customer wants to pay part of the order amount later by invoice, you need to book all other payment methods before you select the *Invoice* option to complete the order.
+Tap on the *Invoice* icon to complete the order and create an invoice. The invoice shows the amount the customer still has to pay. As such, if the customer wants to pay part of the order amount later by invoice, you need to book all other payment methods before you select the *Invoice* option to complete the order.
 ====
 
 After you have booked the first payment for an order, you can no longer make the following changes to the shopping cart:
@@ -441,23 +441,23 @@ After you booked any payments for the order, you need to either complete the ord
 Receiving more than one payment method:
 
 . Tap in the amount that the customer wants to pay with the first payment method.
-. Tap the button for the payment method you received. +
+. Tap on the button for the payment method you received. +
 *_Note:_* If the customer wants to be issued with an invoice in order to pay part of the order amount later, you need to book all other payment methods before you select the *Invoice* option to charge the remaining balance on account.
 → The first payment is booked.
 . Tap in the amount that the customer wants to pay with the next payment method.
-. Tap the button for the payment method you received. +
+. Tap on the button for the payment method you received. +
 *_Tip:_* If you book more than one cash payment, these individual cash amounts are totalled. +
 → The next payment is booked. +
 . If necessary, accept additional payments until the order is paid in full. +
-*_Tip:_* Tap the *Payment* bar to view details of the payments you already booked. +
+*_Tip:_* Tap on the *Payment* bar to view details of the payments you already booked. +
 → When the complete amount is paid, the order is created. +
 → The *Order created* view opens. +
 → The order is created. +
 → The receipts are printed. Otherwise, tap *Print receipts* to print the receipts. +
 . Hand over the receipt.
 *_Purchase on account:_* A merchant receipt, a payment receipt and an invoice are created. In this case, hand over the invoice and the payment receipt.
-*_Tip:_* Tap *Show order* to view the order details.
-. Tap *New order* to continue with ringing up the next customer at the POS.
+*_Tip:_* Tap on *Show order* to view the order details.
+. Tap on *New order* to continue with ringing up the next customer at the POS.
 
 [#440]
 ==== Accepting down payments
@@ -482,15 +482,15 @@ Proceed as described below to receive a down payment and create an invoice for t
 *_Important:_* Ensure that the customer really is the person saved in the customer data. +
 . Add the items <<40, to the POS basket>>.
 . Tap in the amount of the down payment you received from the customer.
-. Tap the button for the payment method you received for the down payment. 
+. Tap on the button for the payment method you received for the down payment. 
 . Accept the down payment in <<#85, cash>> or by <<#90, card payment>>.
-. Tap the *Invoice* icon.
+. Tap on the *Invoice* icon.
 . Check the order details.
-. Tap *Invoice*. +
+. Tap on *Invoice*. +
 → The *Order created* view opens. +
 → The order is created. +
 → The invoice is printed. Otherwise, tap *Print invoice* to print the invoice.
-. Tap *New order* to continue with ringing up the next customer at the POS.
+. Tap on *New order* to continue with ringing up the next customer at the POS.
 
 [#500]
 === Finding orders
@@ -512,19 +512,19 @@ Opening the order search:
 
 . Open the *POS* menu and tap on *Return*. +
 → The return menu is displayed.
-. Tap *Search order*. +
+. Tap on *Search order*. +
 → The order search opens.
 
 *_Alternative:_*
 
 . Open the *POS* menu and tap on *POS*. +
 → The POS shopping cart opens.
-. Tap the three dots in the top right corner of the screen. +
+. Tap on the three dots in the top right corner of the screen. +
 → Additional options are displayed.
-. Tap *Load order*. +
+. Tap on *Load order*. +
 → The order search opens.
 
-Enter the order ID or the receipt number into the search field. Tap *Search* to access the order data. Now you can xref:pos:plentymarkets-pos-for-pos-users,adoc#370[finalise the return] or hand over the xref:pos:pos-online-orders.adoc#[items that were purchased online].
+Enter the order ID or the receipt number into the search field. Tap on *Search* to access the order data. Now you can xref:pos:plentymarkets-pos-for-pos-users,adoc#370[finalise the return] or hand over the xref:pos:pos-online-orders.adoc#[items that were purchased online].
 
 [#520]
 ==== Retrieving an order automatically
@@ -536,9 +536,9 @@ Opening the POS shopping cart or the order search:
 
 . Open the *POS* menu and tap on *POS*. +
 → The POS shopping cart opens.
-. Tap the three dots in the top right corner of the screen. +
+. Tap on the three dots in the top right corner of the screen. +
 → Additional options are shown.
-. Tap *Load order*. +
+. Tap on *Load order*. +
 → The order search opens.
 
 Scan the barcode on the receipt. Now you can xref:pos:plentymarkets-pos-for-pos-users,adoc#370[finalise the return] or hand over the xref:pos:pos-online-orders.adoc#[items that were purchased online].
@@ -558,7 +558,7 @@ Selling a multipurpose coupon and generating a coupon code automatically:
 . Add the coupon to the POS shopping cart.
 . Select the quantity. +
 → The *Select gift card* window is displayed.
-. Tap *Generate*. +
+. Tap on *Generate*. +
 *_Tip:_* You are not prompted to enter a coupon code if you enter a quantity of more than one coupon.
 . *_Optional:_* Enter the coupon value. +
 → The coupon value is inserted automatically if the coupon item has a fixed price.
@@ -576,7 +576,7 @@ Selling a multipurpose coupon and entering an existing coupon code:
 *_Tip:_* If you select a quantity of more than one coupon, the coupon codes are generated automatically. +
 → The *Select gift card* window is displayed.
 . Tap on the *Gift card code* field and enter the code.
-. Tap *Existing*. +
+. Tap on *Existing*. +
 → The coupon value is retrieved and inserted.
 . Finish processing the order as usual. +
 → The coupon code is printed on the POS receipt.
@@ -594,7 +594,7 @@ Selling a multipurpose coupon and saving a coupon code in the system:
 *_Tip:_* Coupon codes are generated automatically if you select a quantity of more than one coupon. +
 → The *Select gift card* window is displayed.
 . Tap on the *Gift card code* field and enter the code.
-. Tap *Generate*. +
+. Tap on *Generate*. +
 → The *Enter gift card value* window opens.
 . Enter the coupon value.
 . Finish processing the order as usual. +
@@ -621,20 +621,20 @@ Selecting an existing customer:
 
 . In the POS shopping cart, tap on the customer symbol at the bottom right. +
 → The customer record of the default customer is displayed.
-. Tap *Search*. +
+. Tap on *Search*. +
 → The *Customer search* view is displayed.
 . Enter the customer data you know to search the customer record.
-. Tap *Search*. +
+. Tap on *Search*. +
 → The results will be listed.
 . Tap on a customer data record. +
 → A list of the addresses saved for the customer is displayed.
-. Tap an address. +
+. Tap on an address. +
 → If only one address exists for the customer record, this address is selected by default. Alternatively, tap on *Use invoice address*. +
 → The customer record is selected.
 . If you have already placed items in the POS shopping cart, you are asked if you want to *Update prices?*. If you select *Yes*, any discounts saved for the customer class of the selected customer are applied to all items of the order. +
 → The customer details are applied to the order. +
 *_Tip:_* You can revert to the default customer by tapping the *Reset* icon.
-. Tap the *X* in the top right corner or tap the screen outside the window to return to the POS shopping cart. +
+. Tap on the *X* in the top right corner or tap the screen outside the window to return to the POS shopping cart. +
 → The selected customer data record is shown in the POS shopping cart.
 . Finish processing the order as usual. +
 → Once you have completed this POS order, the system defaults back to the default customer.
@@ -665,9 +665,9 @@ Adding a note to the order:
 . Click on *Add*. +
 → The *Add note* window is displayed.
 . Enter the note text.
-. Tap the check mark to save the note to the order. +
+. Tap on the check mark to save the note to the order. +
 → The note is displayed in the list of notes and is imported to plentymarkets.
-. Tap *X* to close the window and return to the shopping cart view.
+. Tap on *X* to close the window and return to the shopping cart view.
 
 [#110]
 ==== Pausing a checkout process/parking a receipt
@@ -684,9 +684,9 @@ Parking a receipt:
 
 . In the POS shopping cart, tap the vertical ellipse at the top right of the screen. +
 → Additional options are displayed.
-. Tap *Park receipt*. +
+. Tap on *Park receipt*. +
 → The *Park receipt* window is displayed.
-. Tap *Yes*. +
+. Tap on *Yes*. +
 → The receipt is saved and a new POS shopping cart is displayed.
 
 [#130]
@@ -699,9 +699,9 @@ Loading a parked receipt:
 
 . In the POS shopping cart, tap the vertical ellipse at the top right of the screen. +
 → Additional options are displayed.
-. Tap *Load receipt*. +
+. Tap on *Load receipt*. +
 → A list of all parked receipts is displayed.
-. Tap whichever receipt you want to load. +
+. Tap on the receipt you want to load. +
 → The parked items of this receipt are displayed in the POS shopping cart.
 . Finish processing the POS order as usual.
 
@@ -715,7 +715,7 @@ Editing order items:
 
 . In the POS shopping cart, tap the order item. +
 → Additional options are displayed.
-. Tap the preferred setting. Pay attention to the explanations given in <<table-POS-user-edit-order-items>>.
+. Tap on the preferred setting. Pay attention to the explanations given in <<table-POS-user-edit-order-items>>.
 
 [[table-POS-user-edit-order-items]]
 .Editing order items
@@ -762,19 +762,19 @@ Instead of xref:pos:plentymarkets-pos-for-pos-users.adoc#140[discounting individ
 [.instruction]
 Applying discounts to the complete shopping cart:
 
-. Tap the green arrow at the bottom of the POS shopping cart. +
+. Tap on the green arrow at the bottom of the POS shopping cart. +
 → A summary of the order and the available payment methods are displayed.
-. Tap *Gift card / discount*.
+. Tap on *Gift card / discount*.
 . Enter the discount percentage in the *Gift card code/discount* field.
-. Tap *Discount*. +
+. Tap on *Discount*. +
 → The discount total is deducted from the order total and the new order total is displayed.
-. Tap *Back*.
+. Tap on *Back*.
 . Finish processing the POS order as usual.
 
 [TIP]
 .How are discounts calculated?
 ====
-If the discount is applied to multiple items, the total discount will be split up among all xref:item:managing-items.adoc#40[discountable items]. An item can _not be discounted_ if the option *Promotional coupons/POS discount* was set to *Not permitted* in the item’s *Global*tab.
+If the discount is applied to multiple items, the total discount will be split up among all xref:item:managing-items.adoc#40[discountable items]. An item can _not be discounted_ if the option *Promotional coupons/POS discount* was set to *Not permitted* in the item’s *Global* tab.
 
 In the POS shopping cart, the original item prices will be displayed in strikethrough text and replaced by the discounted prices.
 ====
@@ -806,14 +806,14 @@ xref:pos:pos-online-orders.adoc#[Click & Collect orders] are not created in plen
 Cancelling an order:
 
 . In the menu bar, tap the *menu symbol*.
-. Tap *POS*.
-. Tap *Cancel order*. +
+. Tap on *POS*.
+. Tap on *Cancel order*. +
 *_Tip:_* You can only select this option if you have the right to cancel orders. +
 → A list of all orders created for this POS since the last z report is displayed.
 . In the row for the order, tap the *Cancellation* icon. +
-icon:map-signs[] *_Or:_* Tap the order to open the order details. Tap the *Cancellation* icon in the detailed view.
+icon:map-signs[] *_Or:_* Tap on the order to open the order details. Tap on the *Cancellation* icon in the detailed view.
 . Confirm the cancellation. +
-. *_ On some card terminals:_* Select if the cancelled amount is to be returned in ncas or booked back to the card account via the terminal.
+. *_On some card terminals:_* Select if the cancelled amount is to be returned in ncas or booked back to the card account via the terminal.
 . Pay out the cancelled amount in cash or process the refund via the POS terminal/payment provider. +
 *_Note:_* If the order was paid for with more than one payment method, cancel each payment individually. +
 → The order is cancelled. +
@@ -858,13 +858,13 @@ xref:pos:plentymarkets-pos-for-pos-users.adoc#500[Find the order]. +
 *_Note:_* The scanned item is added to the return with a quantity of *1*. As such, every item to be returned must be scanned individually. +
 → By default, the *Default repair storage location* of the POS is selected.
 . *_Optional:_* Select a different target storage location: +
-  .. Tap the item.
+  .. Tap on the item.
   .. Select the option *Change target storage location* from the drop-down list. +
   → The available storage location are shown.
   .. Scan the barcode of the target storage location.
 . *_Optional:_* Add a xref:pos:plentymarkets-pos-for-pos-users.adoc#100[note to the return].
 . On the original receipt, cross out the items the customer is returning.
-. Tap *Complete and pay out cash* or *Complete and create coupon*. +
+. Tap on *Complete and pay out cash* or *Complete and create coupon*. +
 . If the main order contains shipping costs, select if these shipping costs are to be refunded. +
 → A return in created in the plentymarkets back end and linked to the main order. +
 → A credit note is created in the plentymarkets back end and linked to the return. +
@@ -878,7 +878,7 @@ If you do not work with a scanner you can select return items manually.
 
 * All order items are selected when you open the order. +
 → xref:pos:plentymarkets-pos-for-pos-users.adoc#350[Remove those items from the return] that the customer does not want to return. +
-*_Tip:_* When you open the order, a recycling bin is shown on the right of the order item. Tap this recycling bin to remove those order items that the customer does not want to return.
+*_Tip:_* When you open the order, a recycling bin is shown on the right of the order item. Tap on this recycling bin to remove those order items that the customer does not want to return.
 
 [#350]
 [.subhead]
@@ -895,30 +895,30 @@ xref:pos:plentymarkets-pos-for-pos-users.adoc#500[Find the order]. +
 *_Tip:_* If the customer wants to rerturnn all items of the order, just tap *Create return* straight away.
 . Remove those items from the return that the customer does not want to return. +
   .. To remove the complete quantity of an order item from the return: +
-    1\. Tap the recycle bin next to the order item. +
+    1\. Tap on the recycle bin next to the order item. +
   .. To remove a subset of an order item from the return:
-    1\. Tap the order item. +
+    1\. Tap on the order item. +
     → Additional options are displayed.
-    2\. Tap *Change quantity*. +
+    2\. Tap on *Change quantity*. +
     → The *Change quantity* window opens.
     3\. Enter the quantity for the item that is being returned. +
 → The quantity of the order item is updated. +
 → By default, the *Default repair storage location* of the POS is selected.
 . *_Optional:_* Select a different target storage location for the item: +
-  .. Tap the item.
+  .. Tap on the item.
   .. Select the option *Change target storage location* from the drop-down list. +
   → The available storage locations are shown in the following order:
     1\. Storage location from order = The storage location of the item at the time it was sold.
     2\. Default repair storage location = The *Default repair storage location* selected in the *Basic settings* tab of the POS.
     3\. Suggested storage locations = The storage location suggestions of the warehouses linked to the variation.
     4\. Used storage locations = The storage locations in which the variation is stored already.
-  .. Tap a target storage location. +
+  .. Tap on a target storage location. +
   → The storage location is changed. +
   *_Tip:_* Tap on the menu to the top right and then on the *Change target storage locations* option to change the target storage locations of all returned items at once.
 . *_Optional:_* Change the quantity and the storage locations of additional order items.
 . *_Optional:_* Add a xref:pos:plentymarkets-pos-for-pos-users.adoc#100[note to the return].
 . On the original receipt, cross out the items the customer is returning.
-. Tap *Complete and pay out cash* or *Complete and create coupon*. +
+. Tap on *Complete and pay out cash* or *Complete and create coupon*. +
 . If the main order contains shipping costs, select if these shipping costs are to be refunded. +
 → A return in created in the plentymarkets back end and linked to the main order. +
 → A credit note is created in the plentymarkets back end and linked to the return. +
@@ -932,7 +932,7 @@ If you do not want to pay out the full amount that the customer paid, e.g. becau
 
 . In the return, tap the order item. +
 → Additional options are displayed.
-. Tap *Change single price* to change the single price of the order item or *Change total price* to change the total price of the order item. +
+. Tap on *Change single price* to change the single price of the order item or *Change total price* to change the total price of the order item. +
 → The price of the order item is updated.
 . Finish processing the return as usual.
 
@@ -988,21 +988,21 @@ Booking a return without linking it to the main order:
 *_Note:_* Items with best before dates, batches or both are not found. +
 → By default, the *Default repair storage location* of the POS is selected.
 . *_Optional:_* Select a different target storage location for the item: +
- .. Tap the item.
+ .. Tap on the item.
  .. Select the option *Change target storage location* from the drop-down list. +
  → The available storage locations are shown in the following order:
    1\. Storage location from order = The storage location of the item at the time it was sold.
    2\. Default repair storage location = The *Default repair storage location* selected in the *Basic settings* tab of the POS.
    3\. Suggested storage locations = The storage location suggestions of the warehouses linked to the variation.
    4\. Used storage locations = The storage locations in which the variation is stored already.
- .. Tap a target storage location. +
+ .. Tap on a target storage location. +
  → The storage location is changed. +
  *_Tip:_* Tap on the menu to the top right and then on the *Change target storage locations* option to change the target storage locations of all returned items at once.
  . *_Optional:_* Change xref:pos:plentymarkets-pos-for-pos-users.adoc#140[ the price of the item].
  . *_Optional:_* Add a xref:pos:plentymarkets-pos-for-pos-users.adoc#100[note to the return].
 . After you have added all returned items, tap the green arrow at the bottom of the POS shopping cart. +
 → The total amount of the return is displayed.
-. Tap *Complete and pay out cash* or *Complete and create coupon*. +
+. Tap on *Complete and pay out cash* or *Complete and create coupon*. +
 → A return without main order is created in the plentymarkets back end. +
 → A credit note without a main order is created in the plentymarkets back end. +
 → If you opted for a coupon, a new order for the amount of the coupon is created.
@@ -1025,8 +1025,8 @@ Paying out refunds via card terminal:
 . *_Optional:_* Add a xref:pos:plentymarkets-pos-for-pos-users.adoc#100[note to the return].
 . After you have added all returned items, tap the green arrow at the bottom of the POS shopping cart. +
 → The total amount of the return is displayed.
-. Tap *Select refund method*.
-. Tap *Refund via card terminal*.
+. Tap on *Select refund method*.
+. Tap on *Refund via card terminal*.
 . Follow the instructions on the card terminal and complete the refund process with the customer’s debit card.
 
 [#180]
@@ -1043,14 +1043,14 @@ Proceed as described below to book a deposit.
 Booking a cash deposit:
 
 . In the menu bar, tap the *menu symbol*.
-. Tap *POS*. +
+. Tap on *POS*. +
 → The *POS menu* is displayed.
-. Tap *Deposits and withdrawals*. +
+. Tap on *Deposits and withdrawals*. +
 → The *Deposit/withdrawal* menu is displayed.
 . Select a *Reason* for the deposit event from the drop-down list.
 . *_Optional:_* Enter additional information on the deposit in the *Details* field.
 . Enter the amount that is deposited in the POS.
-. Tap *Deposit* to save the deposit. +
+. Tap on *Deposit* to save the deposit. +
 → The current cash on hand is updated. +
 → A receipt for the deposit is printed. +
 → The receipt is imported to plentymarkets and saved in the *Orders » Document archive* menu.
@@ -1064,14 +1064,14 @@ Proceed as described below to book a withdrawal.
 Booking a cash withdrawal:
 
 . In the menu bar, tap the *menu symbol*.
-. Tap *POS*. +
+. Tap on *POS*. +
 → The *POS menu* is displayed.
-. Tap *Deposits and withdrawals*. +
+. Tap on *Deposits and withdrawals*. +
 → The *Deposit/withdrawal* menu is displayed.
 . Select a *Reason* for the withdrawal event from the drop-down list.
 . *_Optional:_* Enter additional information on the withdrawal in the *Details* field.
 . Enter the amount that is withdrawn from the POS.
-. Tap *Withdrawal* to save the withdrawal. +
+. Tap on *Withdrawal* to save the withdrawal. +
 → The current cash on hand is updated. +
 → A receipt for the withdrawal is printed. +
 → The receipt is imported to plentymarkets and saved in the *Orders » Document archive* menu.
@@ -1128,9 +1128,9 @@ X reports contain the following information:
 Creating an x report:
 
 . In the menu bar, tap the *menu symbol*.
-. Tap *POS*. +
+. Tap on *POS*. +
 → The *POS menu* is displayed.
-. Tap *X report*. +
+. Tap on *X report*. +
 *_Note:_* If the option is greyed out, you need additional xref:pos:integrating-plentymarkets-pos.adoc#170[rights] to create x reports. +
 → The x report is printed.
 
@@ -1161,11 +1161,11 @@ Z reports contain the following information:
 Creating a z report:
 
 . In the menu bar, tap the *menu symbol*.
-. Tap *POS*. +
+. Tap on *POS*. +
 → The *POS menu* is displayed.
-. Tap *Z report*.
+. Tap on *Z report*.
 . Count the actual cash on hand and enter this amount.
-. Tap *Create Z report*. +
+. Tap on *Create Z report*. +
 *_Note:_* If the option is greyed out, you need additional xref:pos:integrating-plentymarkets-pos.adoc#170[rights] to create z reports. +
 → The z report is imported to plentymarkets. +
 → The z report is imported and saved in the *Orders » Document archive* menu. +
@@ -1200,15 +1200,15 @@ Saving a till count result:
 
 . Log into the plentymarkets App.
 . In the menu bar, tap the *menu symbol*.
-. Tap *POS*. +
+. Tap on *POS*. +
 → The POS menu is displayed.
-. Tap *Till count*. +
+. Tap on *Till count*. +
 → The *Till count* menu is displayed. The lowest coin denomination is preselected.
 . Use the numpad to enter the number of coins you counted for this denomination.
-. Tap the green return arrow to jump to the next denomination.
+. Tap on the green return arrow to jump to the next denomination.
 . Repeat this process until you have entered the quantity of all coins and notes. +
 icon:map-signs[] *_Or:_* To enter the total amount counted instead of the quantity per denomination, tap the on *Overwrite* field and enter the total amount you counted.
-. Tap *Save till count*. +
+. Tap on *Save till count*. +
 → A till count report is created and saved in the *Orders » Document archive* menu.
 . *_Optional:_* Tap on *Print till count report* to print the report.
 . If the actual cash on hand differs from the expected cash on hand, proceed as described below to book the difference.
