Default country in new contact and address

--- a/docs/en-gb/modules/crm/pages/create-contact.adoc
+++ b/docs/en-gb/modules/crm/pages/create-contact.adoc
@@ -155,7 +155,7 @@ This data is used for the invoice address, for example. The order of the postcod
 *Region/County*
 |Select the values from the drop-down list. +
 *_Note:_* The drop-down list *Region/County* is _not_ available for all countries. +
-*_Note:_* The setting *Invoice address* is already preselected automatically. You can of course adjust the setting before saving the contact data record.
+*_Note:_* The country that you saved as default location in the *Setup » Client » [Select client] » Settings* menu is automatically preselected.  You can of course adjust the setting before saving the contact data record.
 
 2+^| *Contact details*
 
@@ -278,7 +278,7 @@ When you create a new contact, some fields are already preselected. You can of c
 
 * In the address details:
 ** the address type *Invoice address*
-** the country *Germany* (this depends on the selected default setting in the system)
+** the country that you saved as default location in the *Setup » Client » [Select client] » Settings* menu
 
 * In the contact details:
 ** the type *Customer* (this is the type with the lowest ID in the *Setup » CRM » Types* menu)
