--- a/docs/en-gb/modules/crm/pages/edit-contact.adoc
+++ b/docs/en-gb/modules/crm/pages/edit-contact.adoc
@@ -504,8 +504,9 @@ This data is used for the invoice address, for example. The order of the options
 
 | *Country* +
 *Region/County*
-|Select the values from the drop-down list.
-*_Important:_* The drop-down list *Region/County* is not available for all countries.
+|Select the values from the drop-down list. +
+*_Important:_* The drop-down list *Region/County* is not available for all countries. +
+*_Note:_* The country that you saved as default location in the *Setup » Client » [Select client] » Settings* menu is automatically preselected.  You can of course adjust the setting before saving the address.
 
 2+^| *Address options* 
 
