--- a/docs/de-de/modules/payment/pages/paypal.adoc
+++ b/docs/de-de/modules/payment/pages/paypal.adoc
@@ -7,7 +7,7 @@
 Mit dem PayPal-Plugin bindest du die *PayPal-Zahlungsarten* in deinen Webshop ein und stellst sie so deinen Kund:innen zur Auswahl. Lade dafür das PayPal-Plugin im link:https://marketplace.plentymarkets.com/paypal_4690[plentyMarketplace^] herunter. Die Einrichtung der Zahlungsarten erfolgt über einen Assistenten. Zudem musst du einige grundlegende Einstellungen in deinem plentymarkets System vornehmen, damit die Zahlungsarten auch in deinem System aktiviert sind. +
 Die Erklärungen auf dieser Seite finden nach dem Hinzufügen des Plugins Anwendung. Allgemeine Informationen zum Hinzufügen und Installieren von Plugins findest du im Abschnitt xref:plugins:plugins.adoc#[Plugins] des Handbuchs.
 
-Ist das PayPal-Plugin installiert, werden Zahlungen automatisch vom verknüpften PayPal-Account ins plentymarkets System importiert. Wie oft der Import stattfindet, stellst du im Assistenten ein. Nach dem Import werden die PayPal-Zahlungen automatisch den entsprechenden xref:payment:beta-zahlungen-verwalten-neu.adoc#10[Aufträgen zugeordnet], wenn die Zuordnungskriterien erfüllt sind. Aufgrund technischer Beschränkungen bei PayPal kann sich beim Import unter Umständen eine Verzögerung von bis zu drei Stunden ergeben.
+Ist das PayPal-Plugin installiert, werden Zahlungen automatisch vom verknüpften PayPal-Account ins plentymarkets System importiert. Wie oft der Import stattfindet, stellst du im Assistenten ein. Nach dem Import werden die PayPal-Zahlungen automatisch den entsprechenden xref:payment:beta-zahlungen-verwalten-neu.adoc#30[Aufträgen zugeordnet], wenn die Zuordnungskriterien erfüllt sind. Aufgrund technischer Beschränkungen bei PayPal kann sich beim Import unter Umständen eine Verzögerung von bis zu drei Stunden ergeben.
 
 [NOTE]
 .Unterschiede zwischen Plugin-Versionen
@@ -57,7 +57,7 @@ Optional kannst du nach Durchlaufen des Assistenten xref:webshop:shop-builder.ad
 [TIP]
 .Click-through-Guide zur Aktualisierung auf Version 6.0
 ======
-Die Schritte zur Aktualisierung des PayPal-Plugins auf Version 6.0 und die Aktivierung von PayPal Checkout sind in diesem Click-through-Guide zusammengestellt. Die Screenshots helfen dir durch die einzelnen Schritte. Du kannst den Guide auch als link:URL[PDF herunterladen^].
+Die Schritte zur Aktualisierung des PayPal-Plugins auf Version 6.0 und die Aktivierung von PayPal Checkout sind in diesem Click-through-Guide zusammengestellt. Die Screenshots helfen dir durch die einzelnen Schritte. Du kannst den Guide auch als link:https://cdn01.plentymarkets.com/avw8j9fg70hi/frontend/downloads/Produkt/Guide_PayPal-Checkout_Update-V6_Stand0322.pdf[PDF herunterladen^].
 ======
 --
 Plugin-Version 5.X::
@@ -143,7 +143,7 @@ Container verknüpfen:
 . Wähle aus der Dropdown-Liste den Datenanbieter, den du verknüpfen möchtest.
 . Wähle den Container, mit dem du den Datenanbieter verknüpfen möchtest. Beachte dazu die Erläuterungen in <<table-paypal-template-container>>.
 . Wiederhole Schritte 5 und 6 für alle Datenanbieter, die du verknüpfen möchtest.
-. *Speichere* (icon:save[role=green]) die Einstellungen.
+. *Speichere* (icon:save[role="green"]) die Einstellungen.
 
 [[table-paypal-template-container]]
 .Container verknüpfen
@@ -179,7 +179,7 @@ Container verknüpfen:
 . Wähle aus der Dropdown-Liste den Datenanbieter, den du verknüpfen möchtest.
 . Wähle den Container, mit dem du den Datenanbieter verknüpfen möchtest. Beachte dazu die Erläuterungen in <<table-paypal-template-container>>.
 . Wiederhole Schritte 5 und 6 für alle Datenanbieter, die du verknüpfen möchtest.
-. *Speichere* (icon:save[role=green]) die Einstellungen.
+. *Speichere* (icon:save[role="green"]) die Einstellungen.
 
 [[table-paypal-template-container]]
 .Container verknüpfen
@@ -216,7 +216,7 @@ Mit *Order confirmation: Additional payment information* verknüpfen, um Kund:in
 | [#intable-paypal-plus-wall]*PayPal PLUS Wall*
 |Durch die Verknüpfung mit dem Container *Checkout: Override payment method* ersetzt die PayPal PLUS Wall alle vorher eingestellten Zahlungsarten. Die Zahlungsarten, die zusätzlich zu den standardmäßig in der Wall angebotenen Zahlungsarten PayPal, Lastschrift sowie Kreditkarte eingestellt sind, werden in der Wall unter diesen gemäß ihrer Priorität angezeigt. +
 Innerhalb des Assistenten stehen dir verschiedene Optionen zur Anzeige der PayPal PLUS Wall zur Verfügung: *Wall ersetzt Liste der Zahlungsarten*, *Wall innerhalb der Liste mit Zahlungsarten* oder *Wall in einem Overlay beim Kaufabschluss*. +
-Beachte auch den Abschnitt xref:payment:paypal.adoc#50[Weitere Informationen zur PayPal PLUS Wall]. Dort werden neben zusätzlichen Informationen auch Beschränkungen beschrieben.
+Beachte außerdem den folgenden Abschnitt zur PayPal PLUS Wall. Dort werden neben zusätzlichen Informationen auch Beschränkungen beschrieben.
 
 |====
 
@@ -416,7 +416,7 @@ Sprachdateien anpassen:
 . Wähle auf der rechten Seite die *Zielsprache* aus der Dropdown-Liste.
 . Klappe im Bereich *PayPal* die verschiedenen Bereiche aus.
 . Gib im Bereich der Zielsprache die gewünschten Texte für die einzelnen Sprachelemente ein.
-. *Speichere* (icon:save[role=green]) die Einstellungen.
+. *Speichere* (icon:save[role="green"]) die Einstellungen.
 . Stelle das Plugin-Set erneut bereit, um die Änderungen zu übernehmen.
 
 Über die Auswahl *Deutsch* als *Zielsprache* kannst du die deutschen Benennungen für deinen Webshop anpassen. Die gewählten Benennungen werden dann auch im Backend übernommen, allerdings bleibt der Zusatz _Plugin: PayPal_. So bleibt die Zugehörigkeit einer Zahlungsart nachvollziehbar. Lade das Backend neu, um die Änderungen sehen zu können.
@@ -490,7 +490,7 @@ image::payment:paypal-assistant-account-de.png[Kontoeinrichtung]
 ===== Ereignisaktionen und alte PayPal-Schnittstelle
 
 Seit die alten Schnittstellen für alle Plugin-Zahlungsarten nicht mehr unterstützt werden, gilt für Ereignisaktionen generell, dass die Filter aus der Filtergruppe *Plugins* sowie die Aktionen aus der Aktionsgruppe *Plugins* für Plugin-Zahlungsarten genutzt werden sollen. Allerdings greift ab Version 5.3.1 des PayPal-Plugins die Aktion *Rückzahlung der PayPal-Zahlung* auch für Zahlungen über die alte PayPal-Schnittstelle. +
-Um andere Änderungen für das PayPal-Plugin einzusehen und Aktualisierungen nicht zu verpassen, kannst du den link:https://marketplace.plentymarkets.com/paypal_4690[Changelog des PayPal-Plugins] nutzen. Generell empfehlen wir die Plugin-Zahlungsarten, die über den link:https://marketplace.plentymarkets.com/plugins/payment/payment-integrationen[plentyMarketplace^] zur Verfügung gestellt werden, zu nutzen.
+Um andere Änderungen für das PayPal-Plugin einzusehen und Aktualisierungen nicht zu verpassen, kannst du den link:https://marketplace.plentymarkets.com/paypal_4690[Changelog des PayPal-Plugins^] nutzen. Generell empfehlen wir die Plugin-Zahlungsarten, die über den link:https://marketplace.plentymarkets.com/plugins/payment/payment-integrationen[plentyMarketplace^] zur Verfügung gestellt werden, zu nutzen.
 --
 
 Plugin-Version 5.X::
@@ -522,11 +522,11 @@ Achtung: Die Plugin-Set Vorschau darf während des Verknüpfens des PayPal-Konto
 ======
 
 .Rückleitung zu plentymarkets ist nicht möglich
-image::payment:paypal-plugin-fehlermeldung_fehler1.png[Plugin Fehlermeldung]
+image::payment:paypal-plugin-error-1.png[Plugin Fehlermeldung]
 
 [%interactive]
 * *Lösung 1:* Wechsele den Browser und versuche es erneut. plentymarkets unterstützt die Browser Google Chrome und Mozilla Firefox.
-* *Lösung 2:* Es existiert noch eine API-Berechtigung im PayPal-Konto. Entferne die Berechtigung für plentymarkets. Die API-Berechtigung ist link:https://www.paypal.com/cgi-bin/webscr?cmd=_profile-api-list-auths[hier] zu finden.
+* *Lösung 2:* Es existiert noch eine API-Berechtigung im PayPal-Konto. Entferne die Berechtigung für plentymarkets. Die API-Berechtigung ist link:https://www.paypal.com/cgi-bin/webscr?cmd=_profile-api-list-auths[hier^] zu finden.
 
 [WARNING]
 .HINWEIS
@@ -565,7 +565,7 @@ Wird die PayPal PLUS Wall nicht ausgegeben, überprüfe die folgenden Punkte:
 * Stelle sicher, dass du von PayPal die Freischaltung zur Nutzung von PayPal PLUS hast.
 * Überprüfe die Einstellungen im im PayPal-Assistenten. +
 → Im Bereich *Konto* des Assistenten muss PayPal PLUS freigeschaltet sein.
-* Überprüfe die xref:payment:paypal.adoc#intable-paypal-plus-wall[Container-Verknüpfungen]. Diese sollten beim Durchlaufen des Assistenten automatisch erstellt werden, können aber auch manuell gesetzt werden.
+* Überprüfe die xref:payment:paypal.adoc#40[Container-Verknüpfungen]. Diese sollten beim Durchlaufen des Assistenten automatisch erstellt werden, können aber auch manuell gesetzt werden.
 * Zur Nutzung von PayPal PLUS muss die xref:payment:paypal.adoc#80[Zahlungsart in Kund:innenklassen erlaubt sein und darf in Versandprofilen nicht gesperrt] sein.
 
 [discrete]
@@ -594,7 +594,7 @@ Mit dem *PayPal Dispute-Plugin* integrierst du PayPal Konfliktlösung in dein pl
 
 Zur Verwendung von PayPal Konfliktlösung ist es erforderlich, vorher das xref:payment:paypal.adoc#10[PayPal-Plugin einzurichten]. Voraussetzung ist die Nutzung von Version 5.0.0 und höher des PayPal-Plugins. Zudem setzt das PayPal Dispute-Plugin plentyShop LTS in Version 5.0.0 und IO in Version 5.0.0 oder höher voraus.
 
-Installiere zur Verwendung von PayPal Konfliktlösung das link:https://marketplace.plentymarkets.com/paypaldispute_6582[PayPal Dispute-Plugin]. Nach der Installation des Plugins ist der dazugehörige Assistent verfügbar. Mithilfe dieses Assistenten wählst du die PayPal-Konten aus, für die du PayPal Konfliktlösung nutzen möchtest. Gehe nun wie folgt vor, um den Assistenten zu durchlaufen und PayPal Konfliktlösung einzurichten.
+Installiere zur Verwendung von PayPal Konfliktlösung das link:https://marketplace.plentymarkets.com/paypaldispute_6582[PayPal Dispute-Plugin^]. Nach der Installation des Plugins ist der dazugehörige Assistent verfügbar. Mithilfe dieses Assistenten wählst du die PayPal-Konten aus, für die du PayPal Konfliktlösung nutzen möchtest. Gehe nun wie folgt vor, um den Assistenten zu durchlaufen und PayPal Konfliktlösung einzurichten.
 
 [.instruction]
 PayPal Konfliktlösung mit dem Assistenten einrichten:
