--- a/docs/en-gb/modules/payment/pages/beta-managing-payments-new.adoc
+++ b/docs/en-gb/modules/payment/pages/beta-managing-payments-new.adoc
@@ -74,7 +74,7 @@ After the import, the bank postings are treated as other payments and are automa
 [#paypal-payment-import]
 === PayPal import
 
-The entry *PayPal import* with the PayPal icon in the navigation on the left is only displayed when the xref:payment:paypal.adocl#[PayPal plugin] is installed. To use this function, you need at least version 6.0.0 of the PayPal plugin. +
+The entry *PayPal import* with the PayPal icon in the navigation on the left is only displayed when the xref:payment:paypal.adoc#[PayPal plugin] is installed. To use this function, you need at least version 6.0.0 of the PayPal plugin. +
 With the function *PayPal import*, you import PayPal payments from your PayPal account directly into your plentymarkets system by using the transaction numbers. In this import, only new payments are imported. Already existing payments are not updated. To import the PayPal payments, proceed as follows:
 
 [.instruction]
