--- a/docs/en-gb/modules/payment/pages/paypal.adoc
+++ b/docs/en-gb/modules/payment/pages/paypal.adoc
@@ -7,7 +7,7 @@
 With the PayPal plugin, you integrate the PayPal payment methods in your online shop and make them available to your customers. To do so, download the PayPal plugin from the link:https://marketplace.plentymarkets.com/en/paypal_4690[plentyMarketplace^]. The setup of the payment methods is done via an assistant. You also have to carry out a few basic settings in your plentymarkets system so that the payment methods are activated in your system. +
 The explanations in this section apply after adding the plugin. You can find more information on adding and installing plugins in the xref:plugins:plugins.adoc#[Plugins] section of the manual.
 
-Once the PayPal plugin is installed, payments are automatically imported into the plentymarkets system via the linked PayPal account. In the assistant, you can set how often you want the import to take place. If the import is done and all assignment criteria are met, PayPal payments are automatically assigned to the xref:payment:beta-managing-payments-new.adoc#10[respective orders]. Due to technical restrictions of PayPal, in exceptional cases the import may take up to 3 hours.
+Once the PayPal plugin is installed, payments are automatically imported into the plentymarkets system via the linked PayPal account. In the assistant, you can set how often you want the import to take place. If the import is done and all assignment criteria are met, PayPal payments are automatically xref:payment:beta-managing-payments-new.adoc#30[assigned to the respective orders]. Due to technical restrictions of PayPal, in exceptional cases the import may take up to 3 hours.
 
 [NOTE]
 .Differences between plugin versions
@@ -33,8 +33,8 @@ Version 6.0 of the PayPal plugin provides some new features. When doing the upda
 * In case you already set up the Installments banner, you don’t need to further adjust it. +
 * Instead of the Express Buttons, there are now buttons for Payment methods. These buttons can also be added. To do so, select the respective settings and set up the buttons. +
 * By finishing the assistant, everything will be linked according to your settings. +
-* In case you selected new payment methods in the assistant, you need to xref:payment:papal.adoc#80 [grant permission in the customer classes]. Also check your shipping profiles and the settings for event procedures, the procedure manager and processes. Changes in document templates may also be required. All this depends on your workflows. +
-Once the assistant has been finished, you can optionally set widgets in the xref:online-store:shop-builder.adoc#widgets[ShopBuider].
+* In case you selected new payment methods in the assistant, you need to xref:payment:paypal.adoc#80[grant permission in the customer classes]. Also check your shipping profiles and the settings for event procedures, the procedure manager and processes. Changes in document templates may also be required. All this depends on your workflows. +
+Once the assistant has been finished, you can optionally set xref:online-store:shop-builder.adoc#widgets[widgets in the ShopBuilder].
 ======
 
 [.instruction]
@@ -102,7 +102,7 @@ include::partial$completing-assistant-multi-clients.adoc[]
 Plugin version 6.X::
 +
 --
-The PayPal Banners for PayPal Installment are available as widgets in the ShopBuilder. Moreover, you can use a ShopBuilder widget to configure the PayPal Buttons for the different payment methods. The form, the label and the background colour of the Payment method Buttons can be adjusted.
+The PayPal Banners for PayPal Installment are available as widgets in the ShopBuilder. Moreover, you can use a ShopBuilder widget to configure the PayPal buttons for the different payment methods. The form, the label and the background colour of the Payment method buttons can be adjusted.
 --
 Plugin version 5.X::
 +
@@ -210,7 +210,7 @@ A link with the container *Order confirmation: Additional payment information* a
 | [#intable-paypal-plus-wall]*PayPal PLUS Wall*
 |A link with the container *Checkout: Override payment method* replaces all previous payment methods with the PayPal PLUS Wall. Any payment methods offered in addition to those included in the Wall – PayPal, Debit and Credit card – are displayed below these four inside the wall in the order of their priority. +
 In the assistant, different options how to display the PayPal PLUS Wall are available: *Wall replaces the payment list*, *Wall within the payment list* or *Wall in an overlay during the purchase*. +
-Also pay attention to xref:payment:paypal.adoc#50[Additional information about the PayPal PLUS Wall]. Additional information as well as restrictions are described there.
+Also pay attention to the following section about the PayPal PLUS Wall. Additional information as well as restrictions are described there.
 
 |====
 
@@ -415,7 +415,7 @@ Adapting language files:
 
 By selecting *German* as the *Target language*, you can adapt the German labels for your online shop. The selected labels are then also applied in the back end, only the addition _Plugin: PayPal_ remains. This way, it remains traceable where a payment method comes from. Reload the back end to see the changes.
 
-Find more information on how to edit online shop texts on the manual page xref:online-store:setting-up-ceres.adoc#231[Editing online store texts].
+Find more information on how to edit online shop texts on the manual page xref:online-store:setting-up-ceres.adoc#231[Editing plentyShop texts].
 
 [#110]
 == FAQ about the PayPal plugin
@@ -448,7 +448,7 @@ First check whether the link:https://marketplace.plentymarkets.com/paypal_4690[l
 [WARNING]
 .Activation and preview of the plugin
 ======
-Make sure that the PayPal plugin is already activated and deployed in the xref:installing-installed-plugins.adoc#[plugin set] of the main client when you are linking your account with plentymarkets. If this is not the case, malfunctions can occur. +
+Make sure that the PayPal plugin is already activated and deployed in the xref:plugins:installing-added-plugins.adoc#[plugin set] of the main client when you are linking your account with plentymarkets. If this is not the case, malfunctions can occur. +
 Attention: The plugin-set preview must _not_ be open while the PayPal account is linked with plentymarkets.
 ======
 
@@ -511,7 +511,7 @@ First check whether the link:https://marketplace.plentymarkets.com/paypal_4690[l
 [WARNING]
 .Activation and preview of the plugin
 ======
-Make sure that the PayPal plugin is already activated and deployed in the xref:installing-installed-plugins.adoc#[plugin set] of the main client when you are linking your account with plentymarkets. If this is not the case, malfunctions can occur. +
+Make sure that the PayPal plugin is already activated and deployed in the xref:plugins:installing-added-plugins.adoc#[plugin set] of the main client when you are linking your account with plentymarkets. If this is not the case, malfunctions can occur. +
 Attention: The plugin-set preview must _not_ be open while the PayPal account is linked with plentymarkets.
 ======
 
@@ -559,7 +559,7 @@ If the PayPal PLUS Wall is not displayed, check the following:
 * Make sure that you are allowed by PayPal to use PayPal PLUS.
 * Check the settings in the PayPal assistant. +
 → PayPal PLUS has to be activated in *Account* step of the assistant.
-* Check the xref:payment:paypal.adoc#intable-paypal-plus-wall[container links]. They should be created automatically by completing the assistant but can also be set manually.
+* Check the xref:payment:paypal.adoc#40[container links]. They should be created automatically by completing the assistant but can also be set manually.
 * In order to use PayPal PLUS, the payment method has to be xref:payment:paypal.adoc#80[allowed in customer classes and unblocked in shipping profiles].
 
 [discrete]
@@ -588,7 +588,7 @@ The *PayPal Dispute plugin* allows you to work on problems and solve conflicts w
 
 Using PayPal Dispute requires setting up the xref:payment:paypal.adoc#10[PayPal plugin] first. You need version 5.0.0 or higher of the PayPal plugin. Moreover, plentyShop LTS and IO are required from version 5.0.0 and higher.
 
-Download and install the link:https://marketplace.plentymarkets.com/en/paypaldispute_6582[PayPal Dispute plugin] to integrate PayPal Dispute into your plentymarkets system. After the installation of the plugin, the corresponding assistant is available. With the help of this assistant you can add the PayPal accounts for which you want to use PayPal Dispute. Proceed as follows, to complete the assistant and set up PayPal Dispute.
+Download and install the link:https://marketplace.plentymarkets.com/en/paypaldispute_6582[PayPal Dispute plugin^] to integrate PayPal Dispute into your plentymarkets system. After the installation of the plugin, the corresponding assistant is available. With the help of this assistant you can add the PayPal accounts for which you want to use PayPal Dispute. Proceed as follows, to complete the assistant and set up PayPal Dispute.
 
 [.instruction]
 Setting up PayPal Dispute with the assistant:
