Update ui adjustments contact ui

--- a/docs/en-gb/modules/crm/pages/edit-contact.adoc
+++ b/docs/en-gb/modules/crm/pages/edit-contact.adoc
@@ -1232,8 +1232,8 @@ Downloading address labels of multiple contacts:
 . Search for the contacts by means of the filter settings. Note the explanations about the filters on the xref:crm:search-contact.adoc#[Searching for a contact] page. +
 → The contacts that correspond to the search criteria entered are displayed.
 . Select (icon:check-square[role="blue"]) the contacts whose address labels you want to print.
-. Click in the toolbar on the top on *Print address label* (icon:print[set=material]). +
-→ The *Group function* window opens.
+. Click in the toolbar on the top on *Download address label* (icon:print[set=material]). +
+→ The *Download address label* window opens.
 . Select the address label from the drop-down list.
 . Click on *Execute*. +
 → The address labels of the selected contacts will be downloaded. +
@@ -1254,7 +1254,7 @@ Sending an email template to multiple contacts:
 → The contacts that correspond to the search criteria entered are displayed.
 . Select (icon:check-square[role="blue"]) the contacts that you want to send an email template to.
 . Click in the toolbar on the top on *Send email template* (icon:forward_to_inbox[set=material]). +
-→ The *Group function* window opens.
+→ The *Send email template* window opens.
 . Select an email template from the drop-down list.
 . Click on *Execute*. +
 → The email template is sent to the selected contacts.
@@ -1274,7 +1274,7 @@ Adding multiple email addresses to a newsletter folder:
 → The contacts that correspond to the search criteria entered are displayed.
 . Select (icon:check-square[role="blue"]) the contacts whose email addresses you want to add to a certain newsletter folder.
 . Click in the toolbar on *Add to newsletter folder* (icon:post_add[set=material]). +
-→ The *Group function* window opens.
+→ The *Add to newsletter folder* window opens.
 . Select the newsletter folder from the drop-down list.
 . Click on *Execute*. +
 → The email addresses of the selected contacts are added to the newsletter folder.
