--- a/docs/de-de/modules/pos/pages/pos-einrichten.adoc
+++ b/docs/de-de/modules/pos/pages/pos-einrichten.adoc
@@ -1059,7 +1059,7 @@ PLZ*; +
 |Gib Straße, Postleitzahl und Ort ein.
 
 | *Land*
-|Wäle das Land aus der Dropdown-Liste, in dem die Kasse eingesetzt wird. Die Standardeinstellung richtet sich nach der Option *Land* im Menü xref:willkommen:schnelleinstieg-basiseinstellungen.adoc#100[Einrichtung » Einstellungen » Stammdaten].
+|Wähle das Land aus der Dropdown-Liste, in dem die Kasse eingesetzt wird. Die Standardeinstellung richtet sich nach der Option *Land* im Menü xref:willkommen:schnelleinstieg-basiseinstellungen.adoc#100[Einrichtung » Einstellungen » Stammdaten].
 
 | *Mandant*
 |Wähle einen Mandanten aus der Dropdown-Liste, wenn die Kasse nicht dem Standardmandanten zugeordnet ist.
