--- a/docs/de-de/modules/maerkte/partials/catalogue-mapping.adoc
+++ b/docs/de-de/modules/maerkte/partials/catalogue-mapping.adoc
@@ -14,11 +14,7 @@ __Menüaufbau eines Katalogs mit Marktplatz-Format__
 * *plentymarkets Datenfelder* Im linken Bereich des Katalogs ordnest du den Marktplatz-Datenfeldern passende plentymarkets Datenfelder zu. Im Screenshot wurden schon einige Felder zugeordnet.
 --
 
-[NOTE]
-.Eigenschaften statt Freitextfelder und Merkmale
-====
-Über Kataloge kannst du keine Freitextfelder und Merkmale mehr exportieren. Verwende stattdessen xref:artikel:eigenschaften.adoc#500[Eigenschaften].
-====
+* Freitextfelder und Merkmale können über Kataloge nicht mehr exportiert werden. Verwende stattdessen xref:artikel:eigenschaften.adoc#500[Eigenschaften].
 
 [.instruction]
 Katalogzuordnungen erstellen:
