Edited columns for event procedures

--- a/docs/de-de/modules/maerkte/pages/amazon-fba-nutzen.adoc
+++ b/docs/de-de/modules/maerkte/pages/amazon-fba-nutzen.adoc
@@ -485,8 +485,8 @@ include::_includes:page$EA.adoc[]
 | Einstellung | Option | Auswahl
 
 | *Ereignis*
-| *Auftragsänderung: Statuswechsel &gt; [5] Freigabe Versand*
-|
+| *Auftragsänderung: Statuswechsel*
+| *[5] Freigabe Versand*
 
 | *Filter 1*
 | *Auftrag &gt; Auftragslager*
