--- a/docs/de-de/modules/maerkte/pages/best-practices-kaufland-rechnungen-hochladen.adoc
+++ b/docs/de-de/modules/maerkte/pages/best-practices-kaufland-rechnungen-hochladen.adoc
@@ -88,8 +88,8 @@ Die in <<#ereignisaktion-rechnungen-kaufland>> aufgeführten Status und Filter d
 |Einstellung |Option |Auswahl
 
 | *Ereignis*
-| *Statuswechsel: [7] Warenausgang gebucht*
-|
+| *Auftragsänderung: Statuswechsel*
+| *[7] Warenausgang gebucht*
 
 | *Filter 1*
 | *Auftrag &gt; Auftragstyp*
