--- a/docs/de-de/modules/maerkte/pages/ebay-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/ebay-einrichten.adoc
@@ -613,8 +613,8 @@ include::_includes:page$EA.adoc[]
 |Einstellung |Option |Auswahl
 
 | *Ereignis*
-| *Auftragsänderung: Statuswechsel &gt; Warenausgang gebucht*
-|
+| *Auftragsänderung: Statuswechsel*
+| *[7] Warenausgang gebucht*
 
 | *Filter 1*
 | *Auftrag &gt; Herkunft*
@@ -2167,8 +2167,8 @@ include::_includes:page$EA.adoc[]
 |Einstellung |Option |Auswahl
 
 | *Ereignis*
-| *Auftragsänderung: Statuswechsel &gt; eBay: Retoure autorisieren, mit  eigenem Etikett*
-|
+| *Auftragsänderung: Statuswechsel*
+| *eBay: Retoure autorisieren, mit  eigenem Etikett*
 
 | *Filter 1*
 | *Auftrag &gt; Auftragstyp*
@@ -2368,8 +2368,8 @@ include::_includes:page$EA.adoc[]
 |Einstellung |Option |Auswahl
 
 | *Ereignis*
-| *Auftragsänderung: Statuswechsel &gt; eBay-Rückerstattung veranlassen*
-|
+| *Auftragsänderung: Statuswechsel*
+| *eBay-Rückerstattung veranlassen*
 
 | *Filter 1*
 | *Auftrag &gt; Auftragstyp*
@@ -2407,8 +2407,8 @@ include::_includes:page$EA.adoc[]
 |Einstellung |Option |Auswahl
 
 | *Ereignis*
-| *Auftragsänderung: Statuswechsel &gt; eBay: Rückerstattung als versendet markieren (ohne PayPal)*
-|
+| *Auftragsänderung: Statuswechsel*
+| *eBay: Rückerstattung als versendet markieren (ohne PayPal)*
 
 | *Filter 1*
 | *Auftrag &gt; Auftragstyp*
