--- a/docs/de-de/modules/maerkte/pages/idealo-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/idealo-einrichten.adoc
@@ -1064,8 +1064,8 @@ include::_includes:page$EA.adoc[]
 |Einstellung |Option |Auswahl
 
 | *Ereignis*
-| Ereignis wählen, zum Beispiel *Statuswechsel: [8] Storniert*
-|
+| Ereignis wählen, zum Beispiel *Auftragsänderung: Statuswechsel*
+| *[8] Storniert*
 
 | *Filter 1*
 | *Auftrag &gt; Auftragstyp*
@@ -1094,8 +1094,8 @@ include::_includes:page$EA.adoc[]
 |Einstellung |Option |Auswahl
 
 | *Ereignis*
-| Ereignis wählen, zum Beispiel *Statuswechsel: [8.1] Storniert durch Kunden*
-|
+| Ereignis wählen, zum Beispiel *Auftragsänderung: Statuswechsel*
+| *[8.1] Storniert durch Kunden*
 
 | *Filter 1*
 | *Auftrag &gt; Auftragstyp*
@@ -1124,8 +1124,8 @@ include::_includes:page$EA.adoc[]
 |Einstellung |Option |Auswahl
 
 | *Ereignis*
-| Ereignis wählen, zum Beispiel *Statuswechsel*. Wähle hier den im xref:maerkte:idealo-einrichten.adoc#intable-status-cancellation-by-buyer[Assistenten festgelegten Status] für Aufträge, für die Kund:innen eine Stornierung angefragt haben.
-|
+| Ereignis wählen, zum Beispiel *Auftragsänderung: Statuswechsel*.
+| Wähle hier den im xref:maerkte:idealo-einrichten.adoc#intable-status-cancellation-by-buyer[Assistenten festgelegten Status] für Aufträge, für die Kund:innen eine Stornierung angefragt haben.
 
 | *Filter 1*
 | *Auftrag &gt; Auftragstyp*
