--- a/docs/de-de/modules/maerkte/pages/zalando.adoc
+++ b/docs/de-de/modules/maerkte/pages/zalando.adoc
@@ -581,9 +581,9 @@ include::_includes:page$EA.adoc[]
 |Einstellung |Option |Auswahl
 
 | *Ereignis*
-| *Statuswechsel*
-| Status wählen, zum Beispiel *[8.0] Storniert* +
+| *Auftragsänderung: Statuswechsel* +
 *_Hinweis:_* Du kannst auch ein anderes Ereignis wählen. Stelle aber sicher, dass das gewählte Ereignis nicht für Aufträge ausgelöst wird, die als versendet markiert oder von Kund:innen storniert wurden.
+| Status wählen, zum Beispiel *[8.0] Storniert*
 
 | *Filter 1*
 | *Auftrag &gt; Auftragstyp*
