--- a/docs/de-de/modules/maerkte/partials/_galeria.adoc
+++ b/docs/de-de/modules/maerkte/partials/_galeria.adoc
@@ -186,8 +186,8 @@ include::_includes:page$EA.adoc[]
 | Einstellung | Option | Auswahl
 
 | *Ereignis*
-| Ereignis wählen, z.B. *Statuswechsel: [8] Storniert*
-|
+| Ereignis wählen, z.B. *Auftragsänderung: Statuswechsel*
+| *[8] Storniert*
 
 | *Filter 1*
 | *Auftrag &gt; Auftragstyp*
@@ -219,9 +219,9 @@ include::_includes:page$EA.adoc[]
 |Einstellung |Option |Auswahl
 
 | *Ereignis*
-| *Auftragsänderung: Statuswechsel &gt; Warenausgang gebucht* +
+| *Auftragsänderung: Statuswechsel* +
 oder *Auftragsänderung: Warenausgang gebucht*
-|
+| *[7] Warenausgang gebucht*
 
 | *Filter 1*
 | *Auftrag > Auftragstyp*
@@ -287,9 +287,8 @@ include::_includes:page$EA.adoc[]
 |Einstellung |Option |Auswahl
 
 | *Ereignis*
-| Ereignis wählen, z.B. *Auftragsänderung: Statuswechsel* +
-*_Hinweis:_* Wähle einen Status, der zu deinem Arbeitsablauf passt. Du kannst dafür zum Beispiel den Status *[9.12] Retoure an GALERIA melden* erstellen.
-|
+| Ereignis wählen, z.B. *Auftragsänderung: Statuswechsel*
+| *_Hinweis:_* Wähle einen Status, der zu deinem Arbeitsablauf passt. Du kannst dafür zum Beispiel den Status *[9.12] Retoure an GALERIA melden* erstellen.
 
 | *Filter 1*
 | *Auftrag &gt; Auftragstyp*
