--- a/docs/de-de/modules/maerkte/partials/mirakl-EP-cancellation.adoc
+++ b/docs/de-de/modules/maerkte/partials/mirakl-EP-cancellation.adoc
@@ -13,8 +13,8 @@ include::_includes:page$EA.adoc[]
 | *Auswahl*
 
 | *Ereignis*
-| *Statuswechsel*
-| Ereignis wählen, zum Beispiel *[8] Storniert*.
+| *Auftragsänderung: Statuswechsel*
+| Status wählen, zum Beispiel *[8] Storniert*.
 
 | *Filter*
 | *Auftrag > Herkunft*
