--- a/docs/de-de/modules/maerkte/partials/mirakl-EP-refund.adoc
+++ b/docs/de-de/modules/maerkte/partials/mirakl-EP-refund.adoc
@@ -13,8 +13,8 @@ include::_includes:page$EA.adoc[]
 | *Auswahl*
 
 | *Ereignis*
-| *Statuswechsel*
-| Ereignis wählen, zum Beispiel *[11] Gutschrift*.
+| *Auftragsänderung: Statuswechsel*
+| Status wählen, zum Beispiel *[11] Gutschrift*.
 
 | *Filter*
 | *Auftrag > Herkunft*
