--- a/docs/de-de/modules/maerkte/pages/flubit.adoc
+++ b/docs/de-de/modules/maerkte/pages/flubit.adoc
@@ -176,8 +176,8 @@ include::_includes:page$EA.adoc[]
 |Einstellung |Option |Auswahl
 
 | *Ereignis*
-| *Statuswechsel: [8.1] Storniert durch Kunden*
-|
+| *Auftragsänderung: Statuswechsel*
+| *[8.1] Storniert durch Kunden*
 
 | *Filter 1*
 | *Auftrag &gt; Auftragstyp*
