--- a/docs/de-de/modules/maerkte/pages/fruugo.adoc
+++ b/docs/de-de/modules/maerkte/pages/fruugo.adoc
@@ -218,8 +218,8 @@ include::_includes:page$EA.adoc[]
 | Einstellung | Option | Auswahl
 
 | *Ereignis*
-| *Statuswechsel: [8] Storniert*
-|
+| *Auftragsänderung: Statuswechsel*
+| *[8] Storniert*
 
 | *Filter 1*
 | *Auftrag &gt; Auftragstyp*
