--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -484,12 +484,13 @@ include::_includes:page$EA.adoc[]
 | *Ereignis*
 | Ereignis wählen, zum Beispiel:
 
-* *Statuswechsel > [Status wählen, zum Beispiel [7] Warenausgang gebucht]*
+* *Auftragsänderung: Statuswechsel*
 
 _oder_
 
 * *Auftragsänderung > Paketnummer*
-|
+| Status wählen, zum Beispiel *[7] Warenausgang gebucht*
+
 | *Filter 1*
 | *Auftrag &gt; Auftragstyp*
 | *Auftrag*
@@ -530,8 +531,8 @@ Die in <<#ereignisaktion-rechnungen-Kaufland>> aufgeführten Status und Filter d
 |Einstellung |Option |Auswahl
 
 | *Ereignis*
-| *Statuswechsel: [7] Warenausgang gebucht*
-|
+| *Auftragsänderung: Statuswechsel*
+| *[7] Warenausgang gebucht*
 
 | *Filter 1*
 | *Auftrag &gt; Auftragstyp*
@@ -614,8 +615,8 @@ include::_includes:page$EA.adoc[]
 |Einstellung |Option |Auswahl
 
 | *Ereignis*
-| *Statuswechsel: Status [8] Storniert*
-|
+| *Auftragsänderung: Statuswechsel*
+| *[8] Storniert*
 
 | *Filter 1*
 | *Auftrag &gt; Auftragstyp*
@@ -648,14 +649,15 @@ include::_includes:page$EA.adoc[]
 |Einstellung |Option |Auswahl
 
 | *Ereignis*
-| Ereignis wählen, zum Beispiel:
+| *Auftragsänderung: Statuswechsel*
+| Status wählen, zum Beispel:
 
-* *Statuswechsel > [4] In Versandvorbereitung*
+* *[4] In Versandvorbereitung*
 
 _oder_
 
-* *Statuswechsel > [5] Freigabe Versand* +
-|
+* *[5] Freigabe Versand*
+
 | *Filter 1*
 | *Auftrag &gt; Auftragstyp*
 | *Auftrag*
