--- a/docs/de-de/modules/maerkte/pages/limango.adoc
+++ b/docs/de-de/modules/maerkte/pages/limango.adoc
@@ -697,8 +697,8 @@ include::_includes:page$EA.adoc[]
 | *Auswahl*
 
 | *Ereignis*
-| *Statuswechsel*
-| Ereignis wählen, zum Beispiel *[8] Storniert*.
+| *Auftragsänderung: Statuswechsel*
+| Status wählen, zum Beispiel *[8] Storniert*.
 
 | *Filter*
 | *Auftrag > Herkunft*
@@ -796,7 +796,7 @@ include::_includes:page$EA.adoc[]
 |Einstellung |Option |Auswahl
 
 | *Ereignis*
-| *Statuswechsel*
+| *Auftragsänderung: Statuswechsel*
 | Status für *Auftragsstatus für Aufträge mit Versanddienstleister (> 5 - < 7)* wählen. +
 Diesen Status legst du im Menü *Plugins » Plugin-Set-Übersicht » [Plugin-Set öffnen] » limango-Plugin öffnen] » Auftragsstatus* fest.
 
