--- a/docs/de-de/modules/maerkte/pages/mytoys.adoc
+++ b/docs/de-de/modules/maerkte/pages/mytoys.adoc
@@ -735,8 +735,8 @@ include::_includes:page$EA.adoc[]
 | *Auswahl*
 
 | *Ereignis*
-| *Statuswechsel*
-| Ereignis wählen, zum Beispiel *[8] Storniert*.
+| *Auftragsänderung: Statuswechsel*
+| Status wählen, zum Beispiel *[8] Storniert*.
 
 | *Filter*
 | *Auftrag > Herkunft*
@@ -763,8 +763,8 @@ include::_includes:page$EA.adoc[]
 |Einstellung |Option |Auswahl
 
 | *Ereignis*
-| *Statuswechsel*
-| Ereignis wählen, zum Beispiel *[7] Warenausgang gebucht*.
+| *Auftragsänderung: Statuswechsel*
+| Status wählen, zum Beispiel *[7] Warenausgang gebucht*.
 
 | *Filter 1*
 | *Auftrag > Auftragstyp*
