--- a/docs/de-de/modules/maerkte/partials/mirakl-EP-order-confirmation.adoc
+++ b/docs/de-de/modules/maerkte/partials/mirakl-EP-order-confirmation.adoc
@@ -13,8 +13,8 @@ include::_includes:page$EA.adoc[]
 | *Auswahl*
 
 | *Ereignis*
-| *Statuswechsel*
-| Ereignis wählen, zum Beispiel [3] *Warten auf Zahlung*.
+| *Auftragsänderung: Statuswechsel*
+| Status wählen, zum Beispiel *[3] Warten auf Zahlung*.
 
 | *Filter*
 | *Auftrag > Herkunft*
