--- a/docs/de-de/modules/maerkte/partials/mirakl-EP-shipping-confirmation.adoc
+++ b/docs/de-de/modules/maerkte/partials/mirakl-EP-shipping-confirmation.adoc
@@ -13,8 +13,8 @@ include::_includes:page$EA.adoc[]
 | *Auswahl*
 
 | *Ereignis*
-| *Statuswechsel*
-| Ereignis wählen, zum Beispiel [7] *Warenausgang gebucht*.
+| *Auftragsänderung: Statuswechsel*
+| Status wählen, zum Beispiel *[7] Warenausgang gebucht*.
 
 | *Filter*
 | *Auftrag > Herkunft*
