FIX formatting in bullet points

--- a/docs/de-de/modules/crm/pages/kontakt-suchen.adoc
+++ b/docs/de-de/modules/crm/pages/kontakt-suchen.adoc
@@ -16,7 +16,7 @@ Kontakt suchen:
 
 . Öffne das Menü *CRM » Kontakte (Testphase)*.
 * *_Möglichkeit 1:_* Klicke auf icon:search[set=material] (*Suchen*), um eine Liste aller Kontakte zu sehen. 
-* *_Möglichkeit 2:_* Gib einen Wert im Suchfeld ein und wähle dann den für dich passenden Filter aus der Vorschlagsliste. + *_Beispiel:_* Wenn du eine Zahl eingibst, werden dir mögliche Filter mit dieser ID vorgeschlagen wie z.B. die Kontakt-ID.
+* *_Möglichkeit 2:_* Gib einen Wert im Suchfeld ein und wähle dann den für dich passenden Filter aus der Vorschlagsliste. *_Beispiel:_* Wenn du eine Zahl eingibst, werden dir mögliche Filter mit dieser ID vorgeschlagen wie z.B. die Kontakt-ID.
 * *_Möglichkeit 3:_* Klicke auf icon:tune[set=material], um die Suchergebnisse mit Hilfe von Filtern einzugrenzen.
 . Beachte die Erläuterungen zu den Filtern in <<#table-search-contact>>.  +
 *_Tipp:_* Gib eine Kombination aus allen oder mehreren Werten und Optionen ein, um die Suche noch genauer einzugrenzen.
