--- a/docs/en-gb/modules/crm/pages/search-contact.adoc
+++ b/docs/en-gb/modules/crm/pages/search-contact.adoc
@@ -16,7 +16,7 @@ Searching for a contact:
 
 . Go to *CRM » Contacts (Test phase)*.
 * *_Alternative 1:_* Click on *Search* (icon:search[set=material]) to get a list of all companies.
-* *_Alternative 2:_* Enter a value in the search field and select the appropriate filter from the suggestion list. + *_Example:_* If you enter a number, the possible filters with this ID will be suggested to you such as for example the contact ID.
+* *_Alternative 2:_* Enter a value in the search field and select the appropriate filter from the suggestion list. *_Example:_* If you enter a number, the possible filters with this ID will be suggested to you such as for example the contact ID.
 * *_Alternative 3:_* Click on icon:tune[set=material] to narrow down the search results with filters.
 . Note the explanations about the filters in <<#table-search-contact>>.  +
 *_Tip:_* You can enter multiple search terms into the search fields at one time. This makes your search run quicker and be more accurate.
