fix formatting / add EN

--- a/docs/de-de/modules/automatisierung/pages/ereignisaktionen.adoc
+++ b/docs/de-de/modules/automatisierung/pages/ereignisaktionen.adoc
@@ -141,7 +141,7 @@ xref:fulfillment:versand-center.adoc#retourenetikett-abrufen[Retourenlabel] +
 xref:auftraege:gelangensbestaetigung-erzeugen.adoc#[Gelangensbestätigung] +
 xref:auftraege:auftraege-verwalten.adoc#840[Sammelrechnung] +
 xref:auftraege:auftraege-verwalten.adoc#860[Sammelgutschrift] +
-xref:auftraege:abhol-lieferschein.adoc#200[Abhol-/Lieferschein]
+xref:auftraege:abhol-lieferschein.adoc#200[Abhol-/Lieferschein] +
 
 *_Wichtig:_* Dieses Ereignis kann auch durch eine andere Ereignisaktion ausgelöst werden, wenn du die Aktion *Rechnung erzeugen* parallel in einer weiteren Ereignisaktion verwendest.
 
