add variable to emailbuilder list

--- a/docs/de-de/modules/crm/pages/emailbuilder.adoc
+++ b/docs/de-de/modules/crm/pages/emailbuilder.adoc
@@ -1288,6 +1288,10 @@ Der QR-Code wird in der E-Mail an deine Kund:innen als URL ausgegeben. Nach eine
 |
 | `orderItem.variation.item.ArtNo`
 
+| `Wert der Bestelleigenschaft`
+|
+| `orderItem.formattedOrderProperty.value`
+
 | `Bruttopreis`
 |
 | `orderItem.formattedAmounts.grossPrice`
